--- a/tis-cc-automation/python_hello.yml
+++ b/tis-cc-automation/python_hello.yml
@@ -14,12 +14,9 @@ pool:
 steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
+  
 - task: PythonScript@0
   inputs:
     scriptSource: 'inline'
     script: 'print(''Hello world Python'')'
-  displayName: 'Run a multi-line script'
+  displayName: 'Script em Python'
