--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,20 +16,13 @@ steps:
 - task: Ansible@0
   inputs:
     ansibleInterface: 'agentMachine'
-    inventoriesAgentMachine: 'inlineContent'
-    inventoryInlineContentAgentMachine: |
-      ---
-      - hosts: all
-        become: yes
-        gather_facts: yes
-      
-        tasks:
-        - name: "EXEMPLO DE REGISTER"
-          shell: "date -u"
-          register: linux_date
-      
-        - name: "EXIBINDO REGISTER"
-          debug:
-            msg: "{{ linux_date.start }}"
+    inventoriesAgentMachine: 'noInventory'
 
+  tasks:
+  - name: "EXEMPLO DE REGISTER"
+    shell: "date -u"
+    register: linux_date
 
+  - name: "EXIBINDO REGISTER"
+    debug:
+      msg: "{{ linux_date.start }}"
