--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,11 +10,5 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: Testando o Ansible
+- script: echo Hello Wordl!
   displayName: 'Run a one-line script'
-
-- task: Ansible@0
-  inputs:
-    ansibleInterface: 'agentMachine'
-    playbookPathOnAgentMachine: 'tis-cc-automation/tis-cc-automation/ansible_simples.yml'
-    inventoriesAgentMachine: 'noInventory'
