Task 1.3 Executando arquivo ansible simples.yml

--- a/Task 1.3 Executando arquivo ansible simples.yml
+++ b/Task 1.3 Executando arquivo ansible simples.yml
@@ -10,5 +10,5 @@ steps:
 
 - script: |
     apt-get install ansible -y
-    ansible-playbook ansible_simples2.yml
+    ansible-playbook ansible_simples2_VALIDADO.yml
   displayName: 'Instalando ansible e executando playbook Simples'
